style update, prevent page jumping when no scroll is necessary

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,6 +24,7 @@ html {
 body {
   font-family: "Open Sans", sans-serif;
   font-size: 1.6rem;
+  overflow-y: scroll;
 }
 
 .container {
